# speckle_automate_jupyter_example

./: .gitignore  README.md  function.ipynb  main.py  pyproject.toml  schema_generation.py
.github/workflows/: main.yml
